# emoji-generic

./: .gitignore  CHANGELOG.md  README.md  default.nix  emoji-generic.cabal  emoji-generic.nix  emoji.cabal  shell.nix
src/Text/: Emoji.hs
src/Text/Emoji/: Data.hs  DataFiles.hs  DataParser.hs  Emojis.hs  Foo.hs  String.hs  Text.hs  Types.hs
src/Text/Emoji/DataFiles/: EmojiTest.hs
test/: Main.hs
tools/: Poster.hs
