cabal-version:       2.0
name:                emoji-generic
version:             0.2.0.0
synopsis:            A generic Emoji library
-- description:
-- bug-reports:
license:             LGPL-3.0-only
license-file:        LICENSE
author:              sternenseemann
maintainer:          git@lukasepple.de
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , data/*

library
  exposed-modules:     Text.Emoji
                     , Text.Emoji.DataFiles.EmojiTest
                     , Text.Emoji.Types
                     , Text.Emoji.String
                     , Text.Emoji.Text
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
                     , text ^>=1.2.4.0
                     , attoparsec ^>=0.13.2.0
                     , file-embed
                     , utf8-light ^>=0.4.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.13 && <4.14
                     , emoji-generic
                     , tasty ^>=1.2.3
                     , tasty-smallcheck ^>=0.8.1
                     , smallcheck ^>=1.1.5
                     , tasty-hunit ^>=0.10.0.2
                     , attoparsec ^>=0.13.2.0
                     , text ^>=1.2.4.0
  default-language:    Haskell2010

executable emoji-poster
  main-is:             Poster.hs
  hs-source-dirs:      tools
  build-depends:       base >=4.13 && <4.14
                     , emoji-generic
                     , conduit^>=1.3.2
                     , xml-conduit^>=1.9.0
                     , xml-types^>=0.3.8
                     , text^>=1.2.4
                     , attoparsec^>=0.13.2
                     , filepath^>=1.4.2
                     , directory^>=1.3.6
                     , optparse-applicative^>=0.15.0
